c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/exp_then_declaration.c
int main(void) {
    int a = -2593;
    a = a % 3;
    int b = -a;
    return b;
}