c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/undeclared_compound_assignment_use.c
int main(void) {
    int b = 10;
    b *= a;
    return 0;
}